--- a/aboutme.html
+++ b/aboutme.html
@@ -1,48 +1,38 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light text-success">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Desarrollo UdeA</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>About Me</title>
+        <!-- Estilos personalizados para el sitio van aqui -->				
+	</head>
+	<body>
+		<header class='masthead'>
+            <p class='masthead-intro'>¡Hey hola, aquí</p>
+            <h1 class='masthead-heading'>TU_NOMBRE!</h1>
+          </header>
+          <section class="introduction-section">
+              <h1>Presentación</h1>
+              <p>¿Quien soy yo?</p>
+              <p>¿Qué me gusta hacer?</p>
+          </section>
+          <section class="location-section">
+              <h1>De dónde soy</h1>
+              <p>Yo nací en...</p>
+          </section>
+          <section class="questions-section">
+              <h1>Más datos acerca de mí</h1>
+              <h2>¿Practicas algún deporte?</h2>
+              <p>uhmm.....</p>
+              <h2>¿En qué te sueñas trabajando después de graduarte?</h2>
+              <p>Pues...</p>
+              <h2>¿Dónde vives actualmente?</h2>
+              <p>Yo vivo...</p>
+              <h2>¿Por qué quieres aprender programación web?</h2>
+              <p>Eh pues...</p>
+          </section>          
+          <footer class="content-footer">
+              <p>Dejame un saludo en mis redes sociales:</p>
+          </footer>
+	</body>
 </html>
