Se modifica información en about.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,32 +4,33 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>About Me</title>
+    <link rel="stylesheet" href="styles/aboutme.css">
         <!-- Estilos personalizados para el sitio van aqui -->				
 	</head>
 	<body>
 		<header class='masthead'>
             <p class='masthead-intro'>¡Hey hola, aquí</p>
-            <h1 class='masthead-heading'>TU_NOMBRE!</h1>
+            <h1 class='masthead-heading'>Juan Pablo Pinzón Cárdenas!</h1>
           </header>
           <section class="introduction-section">
               <h1>Presentación</h1>
-              <p>¿Quien soy yo?</p>
-              <p>¿Qué me gusta hacer?</p>
+              <p>Estudiante de Ingeniería de Telecomunicaciones con experiencia en implementación de proyectos TI en plataforma de Omnicanalidad</p>
+              <p>Me gusta abordar proyectos que me reten a hacer uso de la lógica y la progamación para propiciar soluciones a las diferentes necesidades de los clientes.</p>
           </section>
           <section class="location-section">
               <h1>De dónde soy</h1>
-              <p>Yo nací en...</p>
+              <p>Yo nací en Chía, Cundinamarca</p>
           </section>
           <section class="questions-section">
               <h1>Más datos acerca de mí</h1>
               <h2>¿Practicas algún deporte?</h2>
-              <p>uhmm.....</p>
+              <p>Actualmente no, pero me destaque en boxeo y taekwondo cuando era más joven</p>
               <h2>¿En qué te sueñas trabajando después de graduarte?</h2>
-              <p>Pues...</p>
+              <p>Quiero alcanzar un cargo DevOps</p>
               <h2>¿Dónde vives actualmente?</h2>
-              <p>Yo vivo...</p>
+              <p>Actualmente vivo en Pto Berrío, Antioquía</p>
               <h2>¿Por qué quieres aprender programación web?</h2>
-              <p>Eh pues...</p>
+              <p>Es una herramienta imprescindible dada la incontable cantidad de soluciones que se pueden desplegar por medio de la web en diversos contextos</p>
           </section>          
           <footer class="content-footer">
               <p>Dejame un saludo en mis redes sociales:</p>
