--- a/aboutme.html
+++ b/aboutme.html
@@ -34,6 +34,11 @@
           </section>          
           <footer class="content-footer">
               <p>Dejame un saludo en mis redes sociales:</p>
+              <ul class="social">
+                <li><a class="css-is-deranged" href="https://github.com/Juanpa93">GitHub</a></li>
+                <li><a class="css-is-deranged" href="https://github.com/Juanpa93">Twitter</a></li>
+                <li><a class="css-is-deranged" href="https://www.instagram.com/juanppinzonc/">Instagram</a></li>
+            </ul>
           </footer>
 	</body>
 </html>
